# airflow

./: .gitignore  SETUP_GUIDE.md  docker-compose.yaml  pyproject.toml  readme.md
dags/: dag_versioning_example.py  git_dag_bundle_example.py  sample.py
